@@ -8,6 +8,7 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import lombok.extern.slf4j.Slf4j;
 import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Value;
@@ -23,17 +24,17 @@ public class LocationUtil {
 
     @Value("${spring.google-api.base-url}")
     private void setBaseUrl(String baseUrl) {
-        this.baseUrl = baseUrl;
+        LocationUtil.baseUrl = baseUrl;
     }
 
     @Value("${spring.google-api.key}")
     private void setKey(String key) {
-        this.key = key;
+        LocationUtil.key = key;
     }
 
     private URL createResultUrl(String location) {
         try {
-            return new URL(baseUrl + URLEncoder.encode(location, "UTF-8") + "&key=" + key);
+            return new URL(baseUrl + URLEncoder.encode(location, StandardCharsets.UTF_8) + "&key=" + key);
         } catch (IOException e) {
             throw new DefaultException(ExceptionCode.BAD_REQUEST);
         }
@@ -47,13 +48,13 @@ public class LocationUtil {
 
             BufferedReader br =
                 new BufferedReader(new InputStreamReader
-                    (httpURLConnection.getInputStream(), "UTF-8")
+                    (httpURLConnection.getInputStream(), StandardCharsets.UTF_8)
                 );
             StringBuilder response = new StringBuilder();
 
-            if(br.ready()){
+            if (br.ready()) {
                 String str = "";
-                while((str = br.readLine()) != null){
+                while ((str = br.readLine()) != null) {
                     response.append(str);
                 }
             }
@@ -63,20 +64,17 @@ public class LocationUtil {
 
             JSONObject jsonResponse = new JSONObject(response.toString());
 
-            if("OK".equals(jsonResponse.get("status"))){
+            if ("OK".equals(jsonResponse.get("status"))) {
                 JSONObject okResponse = new JSONObject(response.toString())
                     .getJSONArray("results").getJSONObject(0)
                     .getJSONObject("geometry").getJSONObject("location");
 
-
-                return "위도: "+String.valueOf(okResponse.getDouble("lat"))
+                return "위도: " + okResponse.getDouble("lat")
                     + System.lineSeparator()
-                    +"경도: " + String.valueOf(okResponse.getDouble("lng"));
-            }else{
+                    + "경도: " + okResponse.getDouble("lng");
+            } else {
                 return "좌표가 없습니다.";
             }
-
-
 
 
         } catch (IOException e) {
